# F4OS

./: .gitignore  Kconfig  LICENSE  Makefile  README  README.md  STYLE  boot.S  bootasm.S  bootmain.c  buddy.c  buddy.h  builddefs.sh  context.c  context.h  f4os.mk  heap.c  heap.h  interrupt.c  interrupt.h  kernel.ld  mem.S  mem.c  mem.h  mpu.c  registers.h  semaphore.c  semaphore.h  systick.c  systick.h  task.c  task.h  types.h  usart.c  usart.h  usermode.c  usermode.h  vectors.S
arch/: Kconfig  Makefile
boot/: Makefile  boot_asm.S  boot_main.c  cortex_m.c
chip/: Kconfig  Makefile
configs/: 32f401cdiscovery.dts  32f401cdiscovery_defconfig  Makefile.in  am335x_bone.dts  am33xx.dtsi  beaglebone_black_defconfig  discovery_defconfig  msp432_launchpad.dts  msp432_launchpad_defconfig  px4.dts  px4_defconfig  stellaris_launchpad.dts  stellaris_launchpad_defconfig  stm32f4.dtsi  stm32f4_discovery.dts  stm32f4_discovery_revb.dts  stm32f4_discovery_revb_defconfig  stm32f4_discovery_revc.dts  stm32f4_discovery_revc_defconfig  stm32f4_px4.dts
dev/: Kconfig  Kconfig.I2C  Kconfig.SPI  Makefile  buf_stream.c  char.c  clocks.c  device.c  fault.c  fdtparse.c  resource.c  shared_mem.c
docs/: am335x.md  arch_porting.md  armv7a.md  armv7m.md  stm32f4.md  tivac.md
inc/: buddy.h  context.h  interrupt.h  mem.h  mpu.h  registers.h  resource.h  semaphore.h  shell.h  spi.h  stdarg.h  string.h  systick.h  task.h  top.h  types.h  usart.h  usermode.h
include/: atomic.h  board_config.h  buddy.h  compiler.h  context.h  float.h  libfdt.h  limits.h  linker_array.h  list.h  math.h  mem.h  profiling.h  profiling_stubs.h  resource.h  semaphore.h  stdarg.h  stddef.h  (+10 more)
tools/kconfig-frontends/frontends/mconf/: Makefile.am
tools/kconfig-frontends/frontends/nconf/: Makefile.am
tools/kconfig-frontends/libs/lxdialog/: Makefile.am
(+600 files in other folders)
